--- a/html/index.html
+++ b/html/index.html
@@ -6,21 +6,21 @@
     <link rel="stylesheet" href="../css/snake.css" charset="utf-8">
   </head>
   <body>
-    <figure class="snake-game">
-    <h1>Snake</h1>
-    Score: <div class='score'></div>
-
-    <div class="restart">
-      <button>Restart Game</button>
-    </div>
-
+    <figure class="snake-game group">
+    <h1>Snakes on a Euclidean Plane</h1>
+    <br>
     <div class="loss">
-      <div class="message">You lost!</div>
+      <div class="message">Here's Looking at Euclid
+        <div class="restart">
+          <br>
+          <button>Restart Game</button>
+        </div>
+      </div>
     </div>
-
     <ul class="board group">
     </ul>
-
+    <br>
+    <div class="scorer">Score: <div class='score'></div>&#960;</div>
     </figure>
     <script src="../js/jquery-2.1.1.js"></script>
     <script src="../keymaster-master/keymaster.js"></script>
@@ -36,7 +36,5 @@
       $snakeGameEl.focus();
     })
     </script>
-
-
   </body>
 </html>
