moved index.html to base of directory

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>SNAKE!</title>
-    <link rel="stylesheet" href="../css/snake.css" charset="utf-8">
+    <link rel="stylesheet" href="./css/snake.css" charset="utf-8">
   </head>
   <body>
     <figure class="snake-game group">
@@ -22,12 +22,12 @@
     <br>
     <div class="scorer">Score: <div class='score'></div>&#960;</div>
     </figure>
-    <script src="../js/jquery-2.1.1.js"></script>
-    <script src="../keymaster-master/keymaster.js"></script>
-    <script src="../js/coord.js"></script>
-    <script src="../js/snake.js"></script>
-    <script src="../js/board.js"></script>
-    <script src="../js/snake-view.js"></script>
+    <script src="./js/jquery-2.1.1.js"></script>
+    <script src="./keymaster-master/keymaster.js"></script>
+    <script src="./js/coord.js"></script>
+    <script src="./js/snake.js"></script>
+    <script src="./js/board.js"></script>
+    <script src="./js/snake-view.js"></script>
     <script>
     $(function (){
       var $snakeGameEl = $(".snake-game");
