--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <figure class="snake-game group">
     <h1>Snakes on a Euclidean Plane</h1>
     <br>
-    <div class="loss">
+    <!-- <div class="loss">
       <div class="message">Here's Looking at Euclid
         <div class="restart">
           <br>
           <button>Restart Game</button>
         </div>
       </div>
-    </div>
+    </div> -->
     <ul class="board group">
     </ul>
     <br>
