head pentagon and margin on body

--- a/index.html
+++ b/index.html
@@ -2,23 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>SNAKE!</title>
+    <title>Snake</title>
     <link rel="stylesheet" href="./css/snake.css" charset="utf-8">
   </head>
   <body>
     <figure class="snake-game group">
     <h1>Snakes on a Euclidean Plane</h1>
     <br>
-    <!-- <div class="loss">
-      <div class="message">Here's Looking at Euclid
-        <div class="restart">
-          <br>
-          <button>Restart Game</button>
-        </div>
-      </div>
-    </div> -->
     <ul class="board group">
     </ul>
+    <div id="base"></div>
     <br>
     <div class="scorer">Score: <div class='score'></div>&#960;</div>
     </figure>
