--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </ul>
     <div id="base"></div>
     <br>
-    <div class="scorer">Score: <div class='score'></div>&#960;</div>
+    <div class="scorer">Score: <div class='score'></div></div>
     </figure>
     <script src="./js/jquery-2.1.1.js"></script>
     <script src="./keymaster-master/keymaster.js"></script>
