--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
 
         <div class="start-screen">
-          Use directional keys to lead the snake to pi
+          Press [Space] start
           <br><br>
-          Press [Space] to pause
+          Use directional keys to lead the snake to pi
         </div>
 
         <div class="restart-screen hidden">
